styles : fix text alignement

--- a/src/assets/styles/Clock.scss
+++ b/src/assets/styles/Clock.scss
@@ -65,6 +65,11 @@
             padding-bottom: 6px;
             align-items: center;
 
+            
+            div:nth-child(1) {
+                text-align: left;
+            }
+
             div:nth-child(2) {
                 text-align: right;
             }
